# CMakeLearning

./: .gitignore
Dependencies_Management/: CMakeLists.txt  main.cpp  person.cpp  person.h
Dependencies_Management/cmake/: AddFmt.cmake
Ep002/: CMakeLists.txt  main.cpp
Ep05/: CMakeLists.txt  main.cpp
Ep05/include/: dog.h  operations.h
Ep05/src/: dog.cpp
Ep07/: CMakeLists.txt  main.cpp
Ep07/include/: log.h
Ep07/logger/src/: log.cpp
Ep07/src/: operations.cpp
Ep08/: CMakeLists.txt
Ep08/src/: main.cpp  supermath.h
Ep08/src/math/src/: supermath.cpp
Ep08/src/stats/src/: stats.cpp
Ep09/: CMakeLists.txt
Ep09/src/math/: math.cmake
Ep09/src/stats/: stats.cmake
Ep09/src/stats/inc/: stats.h
Ep10/: CMakeLists.txt
Ep10/src/math/: CMakeLists.txt
Ep10/src/stats/: CMakeLists.txt
Ep11/: message.cmake  multiline_message.cmake  simple.cmake
Ep12/: variable.cmake
Ep13/: list.cmake
Ep14/: flow-control.cmake
Ep15/: for_loop.cmake  while_loop.cmake  zip_list_foreach.cmake
Ep16/: function.cmake  function2.cmake  macro.cmake
Ep18/: CMakeLists.txt
Ep18/src/: information.cpp  information.h  main.cpp
Ep18/src/math/: CMakeLists.txt  supermath.cpp
Ep18/src/stats/: CMakeLists.txt  stats.cpp
Ep18/src/stats/include/: stats.h
Ep22/: CMakeLists.txt
Ep22/cmake/: AddGoogleTest.cmake
Ep22/test/: CMakeLists.txt  test_calc.cpp
Ep23/cmake/: AddCatch2.cmake
Ep23/src/: calculator.h
Ep23/test/: CMakeLists.txt  test_calc.cpp
Ep24/: CMakeLists.txt  main.cpp
Ep24/cmake/: AddCatch2.cmake
Ep24/src/: CMakeLists.txt  calculator.h
Ep24/test/: test_run_app.cpp
custom_target/: CMakeLists.txt  main.cpp  person.cpp  person.h
